--- a/src/pages/Loginpage.module.css
+++ b/src/pages/Loginpage.module.css
@@ -12,6 +12,11 @@
 
 }
 
+.errorMessage {
+    display: none;
+    color: darkred;
+  }
+
 .loginTitle{
     color:#5D3F58;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
