--- a/src/components/ButtonShop.module.css
+++ b/src/components/ButtonShop.module.css
@@ -1,12 +1,19 @@
-.button{
+.button {
     background-color: #5D3F58;
     border-radius: 25px;
-    width: 15vw;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,1);
+    width: 200px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-p{
+.text {
     color: #ECE1E7;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: large;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:0;
 }
