--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -1,49 +1,56 @@
-.navBar{
+/* Style for the navbar */
+.navBar {
   width: 100%;
+  height: 100px;
+  background-color: #ECE1E7;
   display: flex;
-  left:0;
-  margin-top:0;
-  top:0;
+  justify-content: space-between; /* Align items to both ends */
+  align-items: center; /* Vertically center items */
   position: fixed;
-  box-shadow: #1c0a19 2px 2px 10px;
+  top: 0;
+  box-shadow: 2px 2px 10px #1c0a19;
+  left:0;
 }
 
-.navItem{
+.headerBrand{
+  margin-left:5%;
+}
+
+/* Style for the navigation items (if applicable) */
+.navItem {
   list-style: none;
 }
 
+/* Style for the dropdown button */
 .dropbtn {
   background-color: #5D3F58;
   color: #ECE1E7;
   padding: 16px;
+  margin-right: 25px; 
   font-size: 16px;
   border: none;
   cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
+/* Style for the container <div> of the dropdown */
+.navbar .dropdown {
+  display: flex;
+  justify-content: flex-end; /* Keep this for the button on the right side */
+  position: relative; /* Add position: relative to make absolute positioning relative to this container */
 }
 
-/* .dropdownContent {
-  right: 0;
-} */
-
-
-/* Dropdown Content (Hidden by Default) */
+/* Style for the dropdown content (Hidden by Default) */
 .dropdownContent {
   display: none;
   position: absolute;
   background-color: #ECE1E7;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 8px 0px 16px 0px rgba(0, 0, 0, 0.2); /* Shadow on the right, adjust as needed */
   z-index: 1;
-  
+  right: 0; /* Position to the left of the button */
 }
 
-/* Links inside the dropdown */
+/* Style for links inside the dropdown */
 .dropdownContent a {
   color: black;
   padding: 12px 16px;
@@ -52,7 +59,9 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdownContent a:hover {background-color: #ECE1E7}
+.dropdownContent a:hover {
+  background-color: #ECE1E7;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdownContent {
