--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -1,4 +1,11 @@
 /* Style for the navbar */
+@font-face {
+  font-family: 'Catamaran';
+  src: url('cd:C/fonts/Catamaran.ttf');
+  font-weight: bold;
+  font-style: normal;
+}
+
 .navBar {
   width: 100%;
   height: 100px;
@@ -14,6 +21,9 @@
 
 .headerBrand{
   margin-left:5%;
+  font-family: 'Catamaran';
+  font-weight: 1000;
+  font-size: 50px;
 }
 
 /* Style for the navigation items (if applicable) */
@@ -54,6 +64,7 @@
 .dropdownContent a {
   color: black;
   padding: 12px 16px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-decoration: none;
   display: block;
 }
