--- a/src/pages/user/RegisterPage.module.css
+++ b/src/pages/user/RegisterPage.module.css
@@ -11,6 +11,29 @@
     align-items: center;
 }
 
+.pictureContainerStyle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px; 
+    height: 200px; 
+    overflow: hidden;
+    border-radius: 50%; 
+}
+
+.pictureContainerStyle img{
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
+}
+
+.pictureContainerStyle p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .divsOnRow{
     display:flex;
     flex-flow: row;
