--- a/src/pages/user/ProfilePage.module.css
+++ b/src/pages/user/ProfilePage.module.css
@@ -12,12 +12,14 @@
   width: 100%; 
   height: 100%;
   object-fit: cover;
+  
 }
 
 .user_profile p{
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 
@@ -28,6 +30,8 @@
   background-size:cover !important;
   background-position:top center !important;
   border-bottom:2px solid #5D3F58;
+  /* drop-shadow: 3px 3px 4px#5D3F58; */
+  
 /*   filter:blur(2px); */
 }
 .edit_cover_btn {
@@ -55,6 +59,17 @@
   margin:0 auto;
   margin-top:-122px;
   position:relative;
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.loggedin_user button{
+  margin-top:10px;
+  display: flex;
+  justify-content: center;
+  width: 100px;
 }
 .user_profile {
   display: flex;
@@ -65,8 +80,9 @@
   overflow:hidden;
   border-radius:50%;
   border:2px solid #5D3F58;
-  position:relative;
   cursor:pointer !important;
+  filter: drop-shadow(3px 3px 4px#5D3F58);
+  
 }
 .user_profile img {
   width:100%;
@@ -125,8 +141,25 @@
   padding:5px 10px;
   border-bottom:1px solid #eeefff;
 }
+
+.profileInfo{
+  display: flex;
+  justify-content: center;
+  margin-top:3%;
+  width: 100%;
+  height: 45vh;
+  filter: drop-shadow(3px 5px 4px#5D3F58);
+}
+
+
+
 @media only screen and (max-width:440px) {
-  .loggedin_user { width:174px; }
+  .loggedin_user { 
+    width:174px; 
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+  }
   .user_profile { float:none;margin:0 auto; }  
   .user_options { float:none;width:170px; margin-top:30px;padding:0; }
   .user_menu { width:180px; margin:0 auto !important;padding-left:8%;box-shadow:0.5px 0.5px 1px #999; }
