--- a/src/components/ProfileInfo.module.css
+++ b/src/components/ProfileInfo.module.css
@@ -11,11 +11,33 @@
     /* height: 80%; */
 }
 
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 176px;
+    margin: 0;
+    box-sizing: border-box;
+    border: transparent;
+    border-radius: 15px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    color: #ECE1E7;
+    background-color: #5D3F58;
+    cursor: pointer;
+    outline: none;
+}
+
 .divsOnRow{
     display:flex;
     flex-flow: row;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 
@@ -24,6 +46,7 @@
     flex-flow: column;
     justify-content: flex-start;
     align-items: flex-start;
+    padding-right: 5%;
     /* justify-content: flex-start;
     align-items: center; */
 }
@@ -42,4 +65,16 @@
 
 .infoProfile p{
     font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
+}
+
+.textBoxes{
+    display:flex;
+    background-color:#ECE1E7;
+    border-style: solid;
+    border-color: #5D3F58;
+    margin-bottom:1%;
+    /* padding-right:20vw; */
+    width: 80%;
+    height:40px;
+    color: #5D3F58;
 }
