--- a/src/pages/user/ProfilePage.module.css
+++ b/src/pages/user/ProfilePage.module.css
@@ -151,6 +151,27 @@
   filter: drop-shadow(3px 5px 4px#5D3F58);
 }
 
+.button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 176px;
+  margin: 0;
+  box-sizing: border-box;
+  border: transparent;
+  border-radius: 15px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  color: #ECE1E7;
+  background-color: #5D3F58;
+  cursor: pointer;
+  outline: none;
+}
+
 
 
 @media only screen and (max-width:440px) {
