--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -6,6 +6,18 @@
   font-style: normal;
 }
 
+.cartbutton{
+  display: flex;
+  flex-flow: end;
+  padding: 0;
+  border: none;
+  background: url('../images/basket.png') no-repeat center center;
+  background-size: cover;
+  width: 50px; /* Adjust the width as needed */
+  height: 50px; /* Adjust the height as needed */
+  cursor: pointer;
+}
+
 .navBar {
   width: 100%;
   height: 100px;
