--- a/src/pages/product/ProductPage.module.css
+++ b/src/pages/product/ProductPage.module.css
@@ -23,8 +23,7 @@
   }
 
   .filterbox {
-    height: 50vh; 
-    width: 35vw; 
+    height: 50vh;  
     background-color: #5D3F58; 
     margin-right:5%;
     margin-left:5%;
@@ -59,48 +58,16 @@
   }
 
   /* price selector */
-  .containerSlider {
-    width: 100vw;
-  }
-  
-  .range {
-    display: flex;
-    width: 600px;
-  }
   
   .range__slider {
     width:80%;
-  }
-  
-  .range__value {
-    width: 35%;
-    margin-left: 45px;    
-    text-align: center;
-    border-left: #e6e4e4 1px solid;
-  }
-  
-  .form-group {
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-  }
-  
-  .form-group label {
-    text-transform: uppercase;
-    font-size: 1rem;
-    color: #8a1cbd;
-    margin-bottom: 5px;
-    font-wight:900;
-  }
-  
-  .form-group span {
-    font-size: 2rem;
-    font-weight: 600;
-    color: #0b3a55;
+    height: 100px;
   }
   
   .range__slider label {
     margin-bottom: 10px;
+    color: #ECE1E7;
+    margin-top:15px;
   }
   
   .range__slider [type="range"] {
@@ -149,5 +116,3 @@
   input::-moz-focus-inner, input::-moz-focus-outer {
     border: 0;
   }
-  
-  
