Worked on the Websockets and it works now, though the use effect makes the direct message receiver see it twice but their own message just once.

--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,8 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #5D3F58; 
 }
+
+.customerservicebutton{
+  position: absolute;
+  padding-bottom: 0;
+}
