--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -66,18 +66,17 @@
   justify-content: flex-end;
   position: relative; }
 
-/* Style for the dropdown content (Hidden by Default) */
+
 .dropdownContent {
   display: none;
   position: absolute;
   background-color: #ECE1E7;
   min-width: 160px;
-  box-shadow: 8px 0px 16px 0px rgba(0, 0, 0, 0.2); /* Shadow on the right, adjust as needed */
+  box-shadow: 8px 0px 16px 0px rgba(0, 0, 0, 0.2); 
   z-index: 1;
-  right: 0; /* Position to the left of the button */
+  right: 0;
 }
 
-/* Style for links inside the dropdown */
 .dropdownContent a {
   color: black;
   padding: 12px 16px;
@@ -86,17 +85,14 @@
   display: block;
 }
 
-/* Change color of dropdown links on hover */
 .dropdownContent a:hover {
   background-color: #ECE1E7;
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdownContent {
   display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
   background-color: #5D3F58;
 }
