--- a/src/pages/order/CartPage.module.css
+++ b/src/pages/order/CartPage.module.css
@@ -69,7 +69,7 @@
 
 .line {
     margin-top: 30px;
-    background-color: rgba(93, 63, 88, 0.5); /* Adjust the alpha value as needed */
+    background-color: rgba(93, 63, 88, 0.5);
     height: 2px;
     width: 100%;
     overflow: hidden;
