--- a/src/pages/product/ProductDetailPage.module.css
+++ b/src/pages/product/ProductDetailPage.module.css
@@ -16,7 +16,7 @@ body {
     width: 90%;
     margin: 50px auto;
     border-radius: 7px;
-    border: 15px solid #5D3F58; /* Style, Width, Color */
+    border: 15px solid #5D3F58; 
     box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.3);
 }
 
@@ -150,7 +150,7 @@ body {
     }
   
     .productImage img {
-      border-radius: 7px; /* Adjust if needed */
+      border-radius: 7px; 
     }
   
     .productText,
