--- a/src/pages/order/CartPage.module.css
+++ b/src/pages/order/CartPage.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     width: 80vw;
+    margin-top: 200px;
     height: 60vh;
     padding: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adjust the values as needed */
@@ -10,6 +11,11 @@
 
 .container h3{
     color: #5D3F58;
+}
+
+.page{
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -68,9 +74,24 @@
 }
 
 .line {
-    margin-top: 30px;
+    margin-top: 25px;
     background-color: rgba(93, 63, 88, 0.5);
     height: 2px;
     width: 100%;
     overflow: hidden;
+}
+
+
+.orderPreview{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.previousOrdersTitle{
+    color: #5D3F58;
+    margin-top: 50px;
+    font-weight:800;
 }
