--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -1,12 +1,3 @@
-/* Style for the navbar */
-@font-face {
-  font-family: 'Catamaran';
-  src: url('cd:C/fonts/Catamaran.ttf');
-  font-weight: bold;
-  font-style: normal;
-}
-
-
 .rightcontainer{
   display: flex;
   justify-content: row;
@@ -39,7 +30,7 @@
 
 .headerBrand{
   margin-left:5%;
-  font-family: 'Catamaran';
+  font-family: 'Raleway', sans-serif;
   font-weight: 1000;
   font-size: 50px;
 }
@@ -52,12 +43,13 @@
 /* Style for the dropdown button */
 .dropbtn {
   background-color: #5D3F58;
-  color: #ECE1E7;
-  padding: 16px;
-  margin-right: 25px; 
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+  border-radius: 25px;
+  width: 100px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
 }
 
 /* Style for the container <div> of the dropdown */
@@ -80,8 +72,7 @@
 .dropdownContent a {
   color: black;
   padding: 12px 16px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  text-decoration: none;
+  font-family: 'Raleway', sans-serif; text-decoration: none;
   display: block;
 }
 
