--- a/src/components/chatting/ChatMessages.module.css
+++ b/src/components/chatting/ChatMessages.module.css
@@ -22,16 +22,26 @@
     width: 80%;
     height:40px;
     color: #5D3F58;
+    
+  font-family: 'Raleway', sans-serif;
 }
 
 .form button{
-  background-color: #5D3F58;
-  color:#ECE1E7;
   border-radius: 25px;
   border-style: none;
   width: 25%;
   height: 20%;
   margin-left: 5px;
+  background-color: #5D3F58;
+  border-radius: 25px;
+  width: 200px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ECE1E7;
+ 
+  font-family: 'Raleway', sans-serif;
 }
 
 .messageHolder {
