--- a/src/pages/user/ProfilePage.module.css
+++ b/src/pages/user/ProfilePage.module.css
@@ -7,6 +7,10 @@
     overflow: hidden;
 }
 
+.email{
+  margin-left: 7px;
+  height: 20px;
+}
 
 .user_profile img{
   width: 100%; 
@@ -69,7 +73,6 @@
   margin-top:10px;
   display: flex;
   justify-content: center;
-  width: 100px;
 }
 .user_profile {
   display: flex;
